LT-312,LT-313: Avoiding showing scrollbars in mac browsers

--- a/Packages/ohif-viewerbase/client/components/viewer/studySeriesQuickSwitch/studySeriesQuickSwitch.styl
+++ b/Packages/ohif-viewerbase/client/components/viewer/studySeriesQuickSwitch/studySeriesQuickSwitch.styl
@@ -158,7 +158,7 @@ $seriesSpacing = 2px
     overflow-y: scroll
     width: calc(100% + 22px)
     &.is-mac
-      width: 100%
+      padding-right: 22px
 
 .studyHover
   height: 0
